--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-server.port=9999
+server.port=8088
 
-db.user=test
-db.password=test123
-db.url=jdbc:mysql://123.206.64.79:3306/ak?useUnicode=true&characterEncoding=UTF-8
+db.user=rengu
+db.password=rengu
+db.url=jdbc:mysql://127.0.0.1:3306/ak?useUnicode=true&characterEncoding=UTF-8
 
-redis.host=123.206.64.79
+redis.host=127.0.0.1
 redis.port=6379  
 
-rabbitmq.host=123.206.64.79
+rabbitmq.host=127.0.0.1
 rabbitmq.port=5672
-rabbitmq.username=test
-rabbitmq.password=test
+rabbitmq.username=root
+rabbitmq.password=root
 rabbitmq.virtual-host=/
 
 #日志输出路径
