--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8088
 
-db.user=rengu
-db.password=rengu
+db.user=root
+db.password=root
 db.url=jdbc:mysql://127.0.0.1:3306/ak?useUnicode=true&characterEncoding=UTF-8
 
 redis.host=127.0.0.1
